version/1.6/_sources/api/_autosummary/ansys.optislang.core.nodes.System.rst.txt
System
======

.. currentmodule:: ansys.optislang.core.nodes

.. autoclass:: System

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      System.assign_placeholder
      
      
      System.control
      
      
      System.create_input_slot
      
      
      System.create_node
      
      
      System.create_output_slot
      
      
      System.create_placeholder_from_property
      
      
      System.delete
      
      
      System.delete_children_nodes
      
      
      System.exists
      
      
      System.find_node_by_uid
      
      
      System.find_nodes_by_name
      
      
      System.get_ancestors
      
      
      System.get_connections
      
      
      System.get_execution_options
      
      
      System.get_hpc_licensing_forwarded_environment
      
      
      System.get_input_slot_value
      
      
      System.get_input_slots
      
      
      System.get_name
      
      
      System.get_nodes
      
      
      System.get_output_slot_value
      
      
      System.get_output_slots
      
      
      System.get_parent
      
      
      System.get_parent_name
      
      
      System.get_properties
      
      
      System.get_property
      
      
      System.get_registered_files
      
      
      System.get_result_files
      
      
      System.get_states_ids
      
      
      System.get_status
      
      
      System.set_execution_options
      
      
      System.set_name
      
      
      System.set_properties
      
      
      System.set_property
      
      
      System.supports
      
      
      System.unassign_placeholder
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      System.type
      System.uid
   
   